--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -31,7 +31,7 @@
           </div>
         </div>
 
-        <div class="alert alert-warning small p-2">
+        <div class="alert alert-warning small p-2 mb-1">
           Das Passwort muss mindestens 6 Zeichen lang sein!
         </div>
 
@@ -46,8 +46,8 @@
           </div>
         </div>
 
-        <div class="alert alert-warning small p-2">
-          Die Damen können auch bei den Männern mitspielen. Dazu müsst Ihr euch jedoch einen zweiten Account erstellen und als Geschlecht "männlich" auswählen.
+        <div class="alert alert-warning small p-2 mb-1">
+          Die Damen können auch bei den Herren mitspielen. Dazu müsst Ihr Euch jedoch einen zweiten Account erstellen und als Geschlecht "männlich" auswählen.
         </div>
 
         <div class="input-group">
