--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -10,7 +10,7 @@
             <a href="#rules" class="nav-link" data-toggle="tab">Regeln</a>
           </li>
           <li class="nav-item">
-            <a href="#comingUpdates" class="nav-link" data-toggle="tab">Updates</a>
+            <a href="#comingUpdates" class="nav-link" data-toggle="tab">App</a>
           </li>
         </ul>
         <br>
@@ -27,23 +27,24 @@
             <a routerLink="/signup">hier.</a>
           </h6>
           <hr>
-          <div class="alert alert-warning text-left p-2">
-            Die Damen können auch bei den Herren mitspielen. Ihr müsst Euch einen zweiten Account erstellen und das Geschlecht "männlich" auswählen.
+          <div class="alert alert-warning text-left">
+            Die Damen können auch bei den Herren mitspielen. Ihr müsst Euch einen zweiten Account erstellen und das Geschlecht "männlich"
+            auswählen.
           </div>
-          <div class="text-left">
-            <p>
-              Es wird zunächst eine einwöchige Registrierungsphase geben, in der sich jeder Spieler, der mitmachen möchte, anmelden kann.
-              Danach werden die Ränge laut Meldeliste festgesetzt.
-              <br>Spieler, die bei Rot-Weiss Walldorf Mitglied sind, aber bei anderen Vereinen spielen, bekommen die Möglichkeit
-              sich an einer beliebigen Stelle einzufordern.
-              <br>Verlieren sie jedoch dieses Spiel, werden sie am Ende der Rangliste eingereiht.
-            </p>
-            <p>
-              Die Registrierungsphase beginnt am
-              <span class="font-weight-bold">04.12.2017</span> und endet am
-              <span class="font-weight-bold">11.12.2017</span>.
-            </p>
+          <div class="alert text-left">
+            Es wird zunächst eine einwöchige Registrierungsphase geben, in der sich jeder Spieler, der mitmachen möchte, anmelden kann.
+            Danach werden die Ränge laut Meldeliste festgesetzt.
+            <br>Spieler, die bei Rot-Weiss Walldorf Mitglied sind, aber bei anderen Vereinen spielen, bekommen die Möglichkeit
+            sich an einer beliebigen Stelle einzufordern.
+            <br>Verlieren sie jedoch dieses Spiel, werden sie am Ende der Rangliste eingereiht.
           </div>
+          <div class="alert alert-success text-left">
+            Die Registrierungsphase beginnt am
+            <span class="font-weight-bold">04.12.2017</span> und endet am
+            <span class="font-weight-bold">11.12.2017 um 17:00 Uhr.</span>.
+            <br> Bis dahin läuft die Testphase. Ihr könnt beliebig fordern und die Ergebnisse direkt eintragen.
+          </div>
+
         </div>
 
         <div class="tab-pane fade" id="rules">
@@ -156,29 +157,40 @@
 
         <div class="tab-pane fade" id="comingUpdates">
 
-          <h5>
-            Geplante Updates:
-          </h5>
-          <hr>
-          <ul>
-            <li>
-              "Passwort vergessen"-Funktion.
-            </li>
-            <li>
-              Email-Benachrichtigung bei Forderungseingang.
-            </li>
-            <li>
-              Bei einer aktiven Forderung sollen beide Spieler die Möglichkeit haben, Kommentare unter ihre "aktive Forderung" zu schreiben,
-              um z.B. einen Termin festlegen zu können.
-            </li>
-            <li>
-              Die Möglichkeit ein Profilbild hochladen zu können.
-            </li>
-            <li>
-              Die Funktion "Neutralisieren". Ein Spieler, der z.B. in den Urlaub fährt, soll die Möglichkeit haben, sich in dieser Zeit
-              neutralisieren zu können.
-            </li>
-          </ul>
+          <div class="alert">
+            <h6>
+              Was demnächst implementiert werden soll:
+            </h6>
+            <ul>
+              <li>
+                Email-Benachrichtigung bei Forderungseingang.
+              </li>
+              <li>
+                Passwort zurücksetzen, falls man es vergessen hat.
+              </li>
+            </ul>
+          </div>
+
+          <div class="alert">
+            <h6>Welche Technologie steckt hinter dieser App?</h6>
+            <blockquote class="pl-3">Es handelt sich hierbei um eine sogenannte
+            <span class="font-italic">"Single-Page-Application"</span>.
+            <br> Das bedeutet, man befindet sich permanent auf nur einer Seite. Seiten werden nicht komplett neu aufgerufen,
+            es werden lediglich nur einzelne Inhalte ausgetauscht.
+          </blockquote>
+          </div>
+
+          <div class="alert">
+            <h6>Die Komponenten:</h6>
+            <ul>
+              <li>
+                <span class="font-italic">Front-End:</span> Angular (derzeit Version 4) & HTML 5 & Bootstrap 4.0
+              </li>
+              <li>
+                <span class="font-italic">Back-End:</span> Google Firebase Real-Time-Database
+              </li>
+            </ul>
+          </div>
 
         </div>
       </div>
