--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -2,8 +2,8 @@
 
   <div class="row justify-content-center">
     <div class="col-md-8 col-lg-6 text-center">
-      <h5 *ngIf="gender === 'men'">Rangliste Männer</h5>
-      <h5 *ngIf="gender === 'women'">Rangliste Frauen</h5>
+      <h5 *ngIf="gender === 'men'">Rangliste Herren</h5>
+      <h5 *ngIf="gender === 'women'">Rangliste Damen</h5>
     </div>
   </div>
 
@@ -11,10 +11,10 @@
     <div class="col-md-8 col-lg-6">
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a href="#table" class="nav-link active" data-toggle="tab" (click)="onChangeToMale()">Männer</a>
+          <a href="#table" class="nav-link active" data-toggle="tab" (click)="onChangeToMale()">Herren</a>
         </li>
         <li class="nav-item">
-          <a href="#table" class="nav-link" data-toggle="tab" (click)="onChangeToFemale()">Frauen</a>
+          <a href="#table" class="nav-link" data-toggle="tab" (click)="onChangeToFemale()">Damen</a>
         </li>
       </ul>
     </div>
@@ -29,7 +29,7 @@
     <div class="col-md-8 col-lg-6" *ngIf="(players|async)?.length">
       <div class="tab-content">
         <div class="tab-pane active fade in show" id="table">
-          <table class="table table-striped table-hover table-sm text-center">
+          <table class="table table-striped table-sm text-center">
             <thead>
               <tr>
                 <th>Rang</th>
@@ -38,7 +38,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let player of players | async | sortPlayers" class="table-row" style="cursor: pointer">
+              <tr *ngFor="let player of players | async | sortPlayers">
                 <th scope="row" *ngIf="player.rank < 999">{{ player.rank }}</th>
                 <th scope="row" *ngIf="player.rank === 999">
                   <div class="text-info">OR*</div>
@@ -48,8 +48,8 @@
                 </th>
                 <td>{{ player.firstName }} {{ player.lastName }}</td>
                 <td>
-                  <i *ngIf="player.challenged === false" class="fa fa-times" aria-hidden="true"></i>
-                  <div *ngIf="player.challenged === true">
+                  <i *ngIf="player.challenged === false" class="fa fa-times text-muted" aria-hidden="true"></i>
+                  <div *ngIf="player.challenged === true" class="font-italic text-muted">
                     {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
                   </div>
                 </td>
@@ -57,6 +57,11 @@
             </tbody>
           </table>
         </div>
+      </div>
+      <div class="alert alert-warning mt-2 small">
+        Hier seht Ihr lediglich die Ranglisten, Ihr könnt hier <span class="font-weight-bold">nicht</span> fordern. Das Fordern funktioniert nur über die Option im persönlichen Bereich. Dazu müsst Ihr natürlich angemeldet sein. Die Funktion berechnet automatisch wen Ihr fordern dürft und wen nicht.
+        <br>Da momenten die Testphase läuft, sind das hier alles nur "Phantasie-Ränge". Ihr könnt Euch mit dem System vertraut machen und Leute fordern und einfach <span class="font-weight-bold">irgendein</span> Ergebnis eintragen.
+        <br>Am Montag wird alles auf Null gesetzt und erst dann geht es richtig los. Viel Spas beim ausprobieren!
       </div>
       <small>*OR = Ohne Rang: Dieser Spieler darf einen beliebigen Spieler fordern.</small>
       <br>
