--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -47,14 +47,14 @@
         </div>
 
         <div class="alert alert-warning small p-2 mb-1">
-          Die Damen können auch bei den Herren mitspielen. Dazu müsst Ihr Euch jedoch einen zweiten Account erstellen und als Geschlecht "männlich" auswählen.
+          Die Damen können sich aussuchen ob sie in nur einer Rangliste mitspielen ("Gesamt" oder "Damen"), oder in beiden. Ihr braucht jedoch für jede Rangliste einen separaten Account.
         </div>
 
         <div class="input-group">
-          <span class="input-group-addon" style="width: 120px;">Geschlecht</span>
+          <span class="input-group-addon" style="width: 120px;">Rangliste</span>
           <select name="gender" id="gender" class="form-control" formControlName="gender">
-            <option value="male">Männlich</option>
-            <option value="female">Weiblich</option>
+            <option value="male">Gesamt (Damen und Herren)</option>
+            <option value="female">Damen</option>
           </select>
         </div>
 
