--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -28,8 +28,7 @@
           </h6>
           <hr>
           <div class="alert alert-warning text-left">
-            Die Damen können auch bei den Herren mitspielen. Ihr müsst Euch einen zweiten Account erstellen und das Geschlecht "männlich"
-            auswählen.
+            Die Damen können sich aussuchen ob sie in nur einer Rangliste mitspielen oder in beiden gleichzeitig. Ihr braucht jedoch für jede Rangliste einen separaten Account, d.h. Ihr müsst Euch zwei mal registrieren.
           </div>
           <div class="alert text-left">
             Es wird zunächst eine einwöchige Registrierungsphase geben, in der sich jeder Spieler, der mitmachen möchte, anmelden kann.
