--- a/src/app/challenge/challenge/challenge.component.html
+++ b/src/app/challenge/challenge/challenge.component.html
@@ -18,7 +18,7 @@
         <!-- Only if unranked: -->
         <div class="card-header" *ngIf="playerObject.rank === 999">
           Du bist derzeit ohne Rang. Du darfst jeden Spieler herausfordern. Falls Du Dein Forderungsspiel verlierst, wirst Du
-          <strong>am Ende der Rangliste</strong> eingeordnet.
+          <strong>am Ende der Rangliste</strong> eingeordnet. (Wenn es Deine erste Niederlage war, wirst Du einmalig nochmal auf OR (Ohne Rang) gesetzt und darfst drei Ränge tiefer fordern.)
         </div>
         <div class="list-group border-dark">
           <app-opponent-detail *ngFor="let opponent of opponents|async|sortPlayers; let i = index;" [opponent]='opponent' [player]='playerObject'
