--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -27,23 +27,19 @@
             <a routerLink="/signup">hier.</a>
           </h6>
           <hr>
+          <div class="alert alert-success text-center">
+            <h6>Die Rangliste hat begonnen, Ihr könnt nun fordern!</h6>
+          </div>
           <div class="alert alert-warning text-left">
-            Die Damen können sich aussuchen ob sie in nur einer Rangliste mitspielen oder in beiden gleichzeitig. Ihr braucht jedoch für jede Rangliste einen separaten Account, d.h. Ihr müsst Euch zwei mal registrieren.
+            Die Damen können sich aussuchen ob sie in nur einer Rangliste mitspielen oder in beiden gleichzeitig. Ihr braucht jedoch
+            für jede Rangliste einen separaten Account, d.h. Ihr müsst Euch zwei mal registrieren.
           </div>
-          <div class="alert text-left">
-            Es wird zunächst eine einwöchige Registrierungsphase geben, in der sich jeder Spieler, der mitmachen möchte, anmelden kann.
-            Danach werden die Ränge laut Meldeliste festgesetzt.
-            <br>Spieler, die bei Rot-Weiss Walldorf Mitglied sind, aber bei anderen Vereinen spielen, bekommen die Möglichkeit
-            sich an einer beliebigen Stelle einzufordern.
-            <br>Verlieren sie jedoch dieses Spiel, werden sie am Ende der Rangliste eingereiht.
+          <div class="alert alert-warning text-left">
+            Spieler, die bei Rot-Weiss Walldorf Mitglied sind, aber bei anderen Vereinen spielen (zusätzlich alle Damen), bekommen die
+            Möglichkeit sich an einer beliebigen Stelle einzufordern.
+            <br>Verliert Ihr Euer erstes Match, so bekommt Ihr noch einmal die Möglichkeit zu fordern. Jedoch muss der Gegner
+            mindesten drei Ränge tiefer eingeordnet sein als der erste.
           </div>
-          <div class="alert alert-success text-left">
-            Die Registrierungsphase beginnt am
-            <span class="font-weight-bold">04.12.2017</span> und endet am
-            <span class="font-weight-bold">11.12.2017 um 17:00 Uhr.</span>.
-            <br> Bis dahin läuft die Testphase. Ihr könnt beliebig fordern und die Ergebnisse direkt eintragen.
-          </div>
-
         </div>
 
         <div class="tab-pane fade" id="rules">
@@ -171,12 +167,23 @@
           </div>
 
           <div class="alert">
+            <h6>
+              Letze Updates:
+            </h6>
+            <ul>
+              <li>
+                08.12.17: Warnhinweis bei falschen Login-Daten.
+              </li>
+            </ul>
+          </div>
+
+          <div class="alert">
             <h6>Welche Technologie steckt hinter dieser App?</h6>
             <blockquote class="pl-3">Es handelt sich hierbei um eine sogenannte
-            <span class="font-italic">"Single-Page-Application"</span>.
-            <br> Das bedeutet, man befindet sich permanent auf nur einer Seite. Seiten werden nicht komplett neu aufgerufen,
-            es werden lediglich nur einzelne Inhalte ausgetauscht.
-          </blockquote>
+              <span class="font-italic">"Single-Page-Application"</span>.
+              <br> Das bedeutet, man befindet sich permanent auf nur einer Seite. Seiten werden nicht komplett neu aufgerufen,
+              es werden lediglich nur einzelne Inhalte ausgetauscht.
+            </blockquote>
           </div>
 
           <div class="alert">
