--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,10 +1,4 @@
-<div class="container py-3">
-
-  <div class="row justify-content-center mb-3">
-    <div class="col-12 col-sm-10 col-md-8 col-lg-5">
-      <div class="small">Hast Du bereits einen Account? Hier einloggen:</div>
-    </div>
-  </div>
+<div class="container py-3 text-center">
 
   <div class="row justify-content-center">
     <div class="col-12 col-sm-10 col-md-8 col-lg-5">
@@ -17,7 +11,7 @@
           <input type="text" class="form-control" [(ngModel)]="email" name="email" placeholder="Email Adresse" id="email">
         </div>
 
-        <div class="input-group">
+        <div class="input-group mb-2">
           <span class="input-group-addon">
             <i class="fa fa-key fa-fw"></i>
           </span>
@@ -25,15 +19,17 @@
             id="password">
         </div>
 
-        <div class="py-3">
+        <div class="alert alert-danger" *ngIf="loginError">
+          <h6>Anmeldung fehlgeschlagen!</h6>
+          <p class="text-left mb-1">Die Login-Daten sind fehlerhaft, oder der Account existiert nicht.</p>
+          <span class="small">(Die Funktion "Passwort zurücksetzen" wird demnächst implementiert.)</span>
+        </div>
+
+        <div class="mb-1">
           <button type="submit" (click)="onLogin()" [disabled]="!email || !password" class="btn btn-primary" style="cursor: pointer;">
             <i class="fa fa-sign-in"></i> Anmelden</button>
         </div>
-        <div class="alert alert-danger" *ngIf="loginError">
-          <h6 class="text-center">Anmeldung fehlgeschlagen!</h6>
-          Login-Daten sind fehlerhaft, oder der Account existiert nicht.
-          <br><span class="small">Die Funktion "Passwort zurücksetzen" wird demnächst implementiert.</span>
-        </div>
+
         <!-- </div> -->
       </form>
     </div>
@@ -41,7 +37,10 @@
 
   <div class="row justify-content-center mb-3">
     <div class="col-12 col-sm-10 col-md-8 col-lg-5">
-      <div class="small mb-3">Hast Du noch keinen Account?</div>
+      <div class="mb-2">
+        <hr>
+        Hast Du noch keinen Account?
+      </div>
       <button (click)="onSignup()" class="btn btn-primary" style="cursor: pointer;">
           <i class="fa fa-user-plus"></i> Registrieren</button>
     </div>
