--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -172,7 +172,8 @@
             </h6>
             <ul>
               <li>
-                08.12.17: Warnhinweis bei falschen Login-Daten.
+                13.12.2017 - Die Ergebniseingabe ist erweitert worden. Man muss nun zusätzlich zum Sieger auch die Sätze eintragen.
+                <br>Die Anzeige der abgeschlossenen Forderungen wurde entsprechend angepasst.
               </li>
             </ul>
           </div>
