Minor updates in Home-Component and Index.html.

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -18,7 +18,7 @@
 
     <ul class="navbar-nav mr-auto mt-lg-0">
       <!-- Ranking-Link -->
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" [routerLink]="['ranking', 'men']">
           <button class="btn btn-outline-danger">
             Ranglisten
